made new html with scss files for optimization code

--- a/src/scss/pages/services/services-slider.scss
+++ b/src/scss/pages/services/services-slider.scss
@@ -474,6 +474,7 @@
         transition: all 250ms ease-in-out;
         border-radius: 0.5rem;
         width: fit-content;
+        cursor: pointer;
         &:hover {
           border-color: $cyan;
           background-color: $cyan;
