--- a/src/scss/specialists.scss
+++ b/src/scss/specialists.scss
@@ -8,17 +8,79 @@
   position: relative;
   display: flex;
   justify-content: space-between;
-  gap: 6.25rem;
-  &-inner{
+  gap: 2.5rem;
+  color: $dark;
+  &-inner {
     width: 80%;
+    display: flex;
+    flex-direction: column;
+    padding-bottom: 4rem;
   }
+  &-content {
+    display: flex;
+    flex-direction: column;
+    row-gap: 6.25rem;
+    &-titleBlock {
+      display: flex;
+      align-items: center;
+      column-gap: 1.25rem;
+    }
+    &-title {
+      font-weight: 500;
+      font-size: 3.12rem;
+      line-height: 1.2;
+      color: $cyan;
+    }
+    &-img {
+      height: 0;
+      border-top: 0.1rem solid #D9D9D9;
+      width: 100%;
+    }
+  }
+}
+
+.content {
+  &-gallery {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    column-gap: 4.8rem;
+    row-gap: 4rem;
+    padding-bottom: 4rem;
+    width: 100%;
+    &-item {
+      display: flex;
+      flex-direction: column;
+      row-gap: 3.6rem;
+      width: 26.6%;
+    }
+  }
+}
+
+.gallery {
+  &-item {
+    &-name {
+      font-weight: 500;
+      font-size: 5rem;
+      line-height: 1;
+      height: 15rem;
+    }
+    &-img {
+      border-bottom: 0.1rem solid $dark;
+    }
+  }
+}
+
+.connection-block {
+  height: 46.25rem;
+  width: 20%;
+  padding: 4rem 5rem 1.5rem 5rem;
 }
 
 
 
 
-
-@media (max-width : 1200px) {
+@media (max-width : 1140px) {
   html {
     font-size: 6px;
   }
@@ -27,13 +89,50 @@
     display: block;
   }
 
+  .header {
+    border-top: 0.1rem solid #d9d9d9;
+  }
+
   .page {
     &-breadcrumbs {
       display: none;
     }
   }
+
+  .connection-block {
+    display: none;
+  }
+
+  .specialists {
+    padding: 0 4rem;
+    &-inner {
+      width: 100%;
+    }
+  }
+}
+
+@media (max-width : 1000px) {
+  .gallery {
+    &-item {
+      &-name {
+        font-size: 4.5rem;
+        height: 12rem;
+      }
+    }
+  }
 }
 
 @media (max-width : 400px) {
+  html {
+    font-size: 4px;
+  }
 
+  .gallery {
+    &-item {
+      &-name {
+        font-size: 3rem;
+        height: 8rem;
+      }
+    }
+  }
 }
