--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -29,11 +29,31 @@
 
 .phone {
   display: none;
-}  //TODO убрать в css везде этот стиль, т.к. есть единый
+}  //TODO убрать в css везде этот стиль, т.к. есть единый. Не забыть и про файл vars.scss.
 
-@media (max-width : 1240px) {
-  .container {
-    padding-left: 4rem;
-    padding-right: 4rem;
+.page {
+  &-title {
+    font-weight: 350;
+    font-size: 5.5rem;
+    line-height: 1;
+    color: $dark;
+    padding-top: 2.5rem;
+    padding-bottom: 2.5rem;
   }
+} //TODO убрать везде в scss этот класс, т.к. есть общий. Не забыть и про файл vars.scss
+
+@media (max-width : 1024px) { //TODO проверить контейнеры где от 1240px - 1024px
+    .container {
+      padding-left: 4rem;
+      padding-right: 4rem;
+    }
+}
+
+@media (max-width : 400px) {
+    .page {
+      &-title {
+        text-align: center;
+        font-size: 7rem;
+      }
+    } //TODO убрать везде в scss этот класс на 400px, т.к. есть общий. Не забыть и про файл vars.scss
 }
