--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -11,6 +11,7 @@
 @import 'all-pages/costs';
 @import 'all-pages/showMore';
 @import 'all-pages/connectionBlock';
+@import 'all-pages/headerConsultation';
 
 .svg-sprites{
   display: none;
