deleted in some scss files property .phone{ display: none}, but added him in file style.scss

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -30,7 +30,7 @@
 
 .phone {
   display: none;
-}  //TODO убрать в css везде этот стиль, т.к. есть единый. Не забыть и про файл vars.scss.
+}
 
 .page {
   &-title {
