--- a/src/scss/analysis.scss
+++ b/src/scss/analysis.scss
@@ -1,10 +1,6 @@
 @import "utils/typography";
 @import "utils/vars";
 
-.phone {
-  display: none;
-}
-
 .page {
   &-title {
     @include page-title;
@@ -382,6 +378,7 @@
       &-img {
         width: 98rem;
         height: 64.5rem;
+        align-self: center;
       }
       &-title {
         font-size: 6.5rem;
