--- a/src/scss/pages/home/first-screen.scss
+++ b/src/scss/pages/home/first-screen.scss
@@ -1,4 +1,5 @@
 .first-screen {
+  color: $dark;
   &-inner {
     background-image: (url(@img/home/first-screen-bg.jpg));
     background-size: 100%;
