--- a/src/scss/pages/home/fifth-screen.scss
+++ b/src/scss/pages/home/fifth-screen.scss
@@ -23,6 +23,7 @@
       margin-bottom: 3rem;
       span {
         color: $white;
+        text-transform: uppercase;
       }
     }
   }
@@ -41,36 +42,104 @@
       display: flex;
       flex-direction: column;
       align-items: flex-start;
-      width: 350px;
-      margin-right: 30px;
+      width: 43.75rem;
+      margin-right: 3.75rem;
 
 
       &-img {
-        width: 10rem;
-        height: 10rem;
-        margin-left: -2rem;
+        width: 5rem;
+        height: 5rem;
+        object-fit: cover;
       }
 
       &-title {
         color: $white;
         font-family: UZSans;
-        font-size: 25px;
+        font-size: 3.1rem;
         font-weight: 500;
-        line-height: 30px;
-        margin-top: 33px;
-        height: 60px;
+        line-height: 1.2;
+        margin-top: 4.1rem;
+        height: 7.5rem;
       }
 
       &-text {
         color: $white;
         font-family: UZSans;
-        font-size: 20px;
+        font-size: 2.5rem;
         font-weight: 350;
-        line-height: 32px;
-        margin-top: 30px;
+        line-height: 1.6;
+        margin-top: 3.75rem;
       }
     }
 
   }
+}
 
+@media (max-width : 1024px) {
+  .fifth-screen {
+    &-inner {
+      padding-left: 4rem;
+      padding-right: 4rem;
+    }
+
+    &-subtitle {
+      text-align: center;
+    }
+
+    &-tagline {
+      text-align: center;
+    }
+  }
+}
+
+@media (max-width : 400px) {
+  .fifth-screen {
+    &-inner {
+      padding: 7.5rem 4rem;
+      &.appeal-inner {
+        background-size: 210%;
+      }
+    }
+
+    &-wrapper {
+      display: flex;
+      flex-direction: column;
+      row-gap: 7.5rem;
+    }
+
+    &-subtitle {
+      font-size: 3.5rem;
+      & li span {
+        font-size: 3.5rem;
+      }
+    }
+
+    &-tagline {
+      font-size: 5rem;
+    }
+
+    &-container {
+      flex-direction: column;
+      align-items: center;
+      row-gap: 7.5rem;
+      &-box {
+        width: 100%;
+        align-items: center;
+        margin-right: initial;
+
+        &-img {
+          width: 10rem;
+          height: 10rem;
+        }
+
+        &-title {
+          font-size: 5rem;
+        }
+
+        &-text {
+          font-size: 5rem;
+        }
+      }
+    }
+  }
 }
