--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -12,6 +12,7 @@
 @import 'all-pages/showMore';
 @import 'all-pages/connectionBlock';
 @import 'all-pages/headerConsultation';
+@import 'all-pages/pluses';
 
 .svg-sprites{
   display: none;
