made property page-description &-title &-text in style.scss and deleted him in some scss files, changed names classes in html some files

--- a/src/scss/utils/vars.scss
+++ b/src/scss/utils/vars.scss
@@ -192,7 +192,7 @@ $maxWidth: 1920px;
   line-height: 1.6;
 }
 
-@mixin description {
+@mixin description { //TODO убрать этот миксин везде
   font-weight: 350;
   font-size: 2.5rem;
   line-height: 1.6;
