--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -42,6 +42,25 @@
     padding-top: 2.5rem;
     padding-bottom: 2.5rem;
   }
+
+  &-description {
+    padding-top: 3.75rem;
+    padding-bottom: 3.75rem;
+    display: flex;
+    flex-direction: column;
+    row-gap: 2.25rem;
+    color: $dark;
+    &-title {
+      font-weight: 500;
+      font-size: 3.1rem;
+      line-height: 1.2;
+    }
+    &-text {
+      font-weight: 350;
+      font-size: 2.5rem;
+      line-height: 1.6;
+    }
+  }
 }
 
 @media (max-width : 1024px) {
@@ -49,13 +68,37 @@
       padding-left: 4rem;
       padding-right: 4rem;
     }
+
+  .page {
+    &-description {
+      padding-top: 5rem;
+      padding-bottom: 5rem;
+      &-title {
+        font-weight: 700;
+        font-size: 3.3rem;
+        line-height: 1.3;
+      }
+      &-text {
+        font-size: 3rem;
+      }
+    }
+  }
 }
 
-@media (max-width : 400px) {
-    //.page {
-    //  &-title {
-    //    text-align: center;
-    //    font-size: 7rem;
-    //  }
+@media (max-width : 500px) {
+
+  .page {
+    //&-title {
+    //  text-align: center;
+    //  font-size: 7rem;
     //}
+    &-description {
+      &-title {
+        font-size: 5rem;
+      }
+      &-text {
+        font-size: 4.5rem;
+      }
+    }
+  }
 }
