--- a/src/scss/support.scss
+++ b/src/scss/support.scss
@@ -27,6 +27,10 @@
     }
   }
 
+  &-description {
+    @include border-bottom;
+  }
+
   &-pros {
     &-container {
       padding-top: 10rem;
@@ -63,18 +67,6 @@
 }
 
 .support {
-  &-text {
-    @include border-bottom;
-    &-cont {
-      color: $dark;
-      font-weight: 350;
-      font-size: 2.5rem;
-      line-height: 1.6;
-      padding-top: 3.75rem;
-      padding-bottom: 3.75rem;
-    }
-  }
-
   &-gallery {
     display: flex;
     flex-direction: column;
@@ -264,11 +256,6 @@
   }
 
   .support {
-    &-text {
-      &-cont {
-        font-size: 4rem;
-      }
-    }
     &-gallery {
       &-block {
         flex-direction: column;
@@ -276,5 +263,4 @@
       }
     }
   }
-
 }
