added new files pageCases.html and .scss and includes in some files

--- a/src/scss/1C-integration.scss
+++ b/src/scss/1C-integration.scss
@@ -47,6 +47,12 @@
 
   &-pros {
     @include border-top;
+    padding-top: 3.75rem;
+    padding-bottom: 3.75rem;
+  }
+
+  &-cases {
+    @include border-bottom;
   }
 }
 
