--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -13,6 +13,7 @@
 @import 'all-pages/connectionBlock';
 @import 'all-pages/headerConsultation';
 @import 'all-pages/pluses';
+@import 'all-pages/pageCases';
 
 .svg-sprites{
   display: none;
