--- a/src/scss/development.scss
+++ b/src/scss/development.scss
@@ -1,276 +1,15 @@
 @import "utils/typography";
 @import "utils/vars";
-
-.svg {
-  &-result {
-    margin-bottom: -2rem;
-  }
-}
-
-.development {
-  &-content {
-    position: relative;
-    &-cont {
-      color: $dark;
-      padding-top: 7.3rem;
-      padding-bottom: 5.1rem;
-      position: relative;
-      z-index: 1;
-      display: grid;
-      grid-template-rows: repeat(3, auto);
-      grid-template-columns: repeat(2, auto);
-    }
-    &-imgMagic {
-      position: absolute;
-      z-index: 0;
-      left: 44%;
-      height: 70.2rem;
-    }
-    &-header {
-      padding-bottom: 4.2rem;
-      display: flex;
-      flex-direction: column;
-      row-gap: 2.5rem;
-      grid-area: 1 / 1 / 2 / 3;
-    }
-    h1 {
-      font-weight: 700;
-      font-size: 12.5rem;
-      line-height: 1.01;
-    }
-    h3 {
-      font-weight: 500;
-      font-size: 4.4rem;
-      line-height: 1.2;
-    }
-    &-text {
-      font-weight: 350;
-      font-size: 3.1rem;
-      line-height: 1.2;
-      width: 90%;
-      @include border-top;
-      padding-top: 4.2rem;
-      grid-area: 2 / 1 / 4 / 2;
-    }
-    &-header2 {
-      padding-bottom: 4.8rem;
-      display: flex;
-      flex-direction: column;
-      row-gap: 4.62rem;
-      align-items: flex-end;
-      grid-area: 2 / 2 / 3 / 3;
-    }
-    &-block {
-      display: flex;
-      justify-content: space-between;
-    }
-    &-img {
-      display: flex;
-      flex-direction: column;
-      row-gap: 4.6rem;
-      text-align: end;
-    }
-  }
-
-  &-offer {
-    background-color: $black;
-    background-repeat: no-repeat;
-    padding-top: 6.25rem;
-    text-align: center;
-    height: 71.6rem;
-    background-position: bottom;
-    background-image: url("../img/development/jaccket.png");
-    &-container {
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-    }
-    &-title1 {
-      color: $white;
-      font-weight: 500;
-      font-size: 3.1rem;
-      line-height: 1;
-      margin-bottom: 4.1rem;
-      box-shadow: 0px 30px 5px 10px #000;
-    }
-    &-title2 {
-      font-weight: 700;
-      font-size: 8.7rem;
-      line-height: 1;
-      margin-bottom: 5.8rem;
-      color:$black;
-      box-shadow: 10px 50px 55px -14px rgba(0, 0, 0, 1);
-      //text-border:
-      text-shadow:0 1px 0 rgb(255,255,255),0px -1px 0 rgb(255,255,255),1px 0px 0 rgb(255,255,255),-1px 0px 0 rgb(255,255,255),1px 1px 0 rgb(255,255,255),1px -1px 0 rgb(255,255,255),-1px 1px 0 rgb(255,255,255),-1px -1px 0 rgb(255,255,255),0px 1.5px 0 rgb(255,255,255),0px -1.5px 0 rgb(255,255,255),1.5px 0px 0 rgb(255,255,255),-1.5px 0px 0 rgb(255,255,255),1.5px 1.5px 0 rgb(255,255,255),1.5px -1.5px 0 rgb(255,255,255),-1.5px 1.5px 0 rgb(255,255,255),-1.5px -1.5px 0 rgb(255,255,255);
-      -webkit-text-shadow:0px 1px 0 rgb(255,255,255),0px -1px 0 rgb(255,255,255),1px 0px 0 rgb(255,255,255),-1px 0px 0 rgb(255,255,255),1px 1px 0 rgb(255,255,255),1px -1px 0 rgb(255,255,255),-1px 1px 0 rgb(255,255,255),-1px -1px 0 rgb(255,255,255),0px 1.5px 0 rgb(255,255,255),0px -1.5px 0 rgb(255,255,255),1.5px 0px 0 rgb(255,255,255),-1.5px 0px 0 rgb(255,255,255),1.5px 1.5px 0 rgb(255,255,255),1.5px -1.5px 0 rgb(255,255,255),-1.5px 1.5px 0 rgb(255,255,255),-1.5px -1.5px 0 rgb(255,255,255);
-      -moz-text-shadow:0px 1px 0 rgb(255,255,255),0px -1px 0 rgb(255,255,255),1px 0px 0 rgb(255,255,255),-1px 0px 0 rgb(255,255,255),1px 1px 0 rgb(255,255,255),1px -1px 0 rgb(255,255,255),-1px 1px 0 rgb(255,255,255),-1px -1px 0 rgb(255,255,255),0px 1.5px 0 rgb(255,255,255),0px -1.5px 0 rgb(255,255,255),1.5px 0px 0 rgb(255,255,255),-1.5px 0px 0 rgb(255,255,255),1.5px 1.5px 0 rgb(255,255,255),1.5px -1.5px 0 rgb(255,255,255),-1.5px 1.5px 0 rgb(255,255,255),-1.5px -1.5px 0 rgb(255,255,255);
-    }
-    &-img {
-      display: grid;
-      grid-template-columns: repeat(2, auto);
-      grid-template-rows: repeat(2, auto);
-      justify-content: space-between;
-      width: 65%;
-      align-self: center;
-    }
-  }
-}
-
-.offer {
-  &-main {
-    &-btn {
-      border: 0.1rem solid $white;
-      border-radius: 3px;
-      height: 8rem;
-      background-color: $black;
-      font-weight: 500;
-      font-size: 2.5rem;
-      line-height: 1.2;
-      color: $white;
-      padding: 2.5rem;
-      cursor: pointer;
-      transition: background-color .2s ease-in-out;
-      &-btnBlue {
-        grid-area: 1 / 1 / 2 / 2;
-        width: 23rem;
-        &:hover:focus {
-          background-color: #1149DC;
-          border: 0.1rem solid #1149DC;
-        }
-      }
-      &-btnRed {
-        grid-area: 1 / 2 / 2 / 3;
-        width: 36.6rem;
-        &:hover:focus {
-          background-color: #D60917;
-          border: 0.1rem solid #D60917;
-        }
-      }
-    }
-    &-rightImg {
-      grid-area: 2 / 1 / 3 / 2;
-      height: 54.3rem;
-    }
-    &-leftImg {
-      grid-area: 2 / 2 / 3 / 3;
-      height: 54.3rem;
-    }
-  }
-}
-
-.content {
-  &-block {
-    &-gallery {
-      grid-area: 3 / 2 / 4 / 3;
-      display: flex;
-      column-gap: 6.4rem;
-      flex-wrap: wrap;
-    }
-  }
-}
+@import "development/development-first-screen";
+@import "development/development-second-screen";
+@import "development/development-third-screen";
+@import "development/development-fourth-screen";
+@import "development/development-fifth-screen";
 
 .page {
-  &-header {
-    display: flex;
-    column-gap: 5.4rem;
-    background-image: url("../img/internet-shops/background-header.png");
-    background-size: cover;
-    height: 12.4rem;
-    justify-content: space-evenly;
-    filter: hue-rotate(329deg);
-    &-block {
-      display: flex;
-      column-gap: 10.4rem;
-      height: 12.4rem;
-    }
-    &-cont {
-      color: $white;
-      align-self: center;
-    }
-
-    &-text {
-      font-weight: 400;
-      font-size: 2.5rem;
-      line-height: 1;
-    }
-
-    &-boldText {
-      font-weight: 700;
-      font-size: 3.7rem;
-      line-height: 1.5;
-    }
-  }
-
-  &-blueBtn {
-    @include page-blueBtn;
-    filter: hue-rotate(38deg);
-  }
-
-  &-pros {
-    @include border-top;
-  }
-
-  &-bonuses {
-    padding-top: 11.5rem;
-    padding-bottom: 3.75rem;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    row-gap: 3.6rem;
-    color: $dark;
-    &-title {
-      &-main {
-        font-weight: 350;
-        font-size: 5rem;
-        line-height: 1;
-        text-align: center;
-      }
-      &-second {
-        font-weight: 700;
-        font-size: 2.5rem;
-        line-height: 1.6;
-      }
-    }
-  }
-
-  &-list {
-    display: flex;
-    flex-direction: column;
-    align-self: center;
-    row-gap: 3.6rem;
-    &-item {
-      display: flex;
-      column-gap: 1.7rem;
-      align-items: center;
-    }
-  }
-
   &-cases {
     @include border-top;
   }
-}
-
-.list {
-  &-item {
-    &-text {
-      font-weight: 350;
-      font-size: 2.5rem;
-      line-height: 1.6;
-    }
-    &-img {
-      object-fit: cover;
-      width: 3rem;
-      height: 3rem;
-    }
-  }
-}
-
-.scissors-img {
-    filter: hue-rotate(21deg);
-}
-
-.vector-btn {
-    display: none;
 }
 
 @media (max-width : 1280px) {
@@ -282,305 +21,15 @@
     padding: 0 4rem;
   }
 
-  .development {
-    &-content {
-      &-cont {
-        display: grid;
-        grid-template-rows: repeat(3, auto);
-        grid-template-columns: repeat(2, auto);
-        padding-top: 9.8rem;
-        padding-bottom: 5.6rem;
-      }
-      &-header {
-        grid-area: 1 / 1 / 2 / 2;
-        row-gap: 1.6rem;
-      }
-      &-text {
-        width: 80%;
-        grid-area: 3 / 1 / 4 / 2;
-      }
-      h1 {
-        font-size: 7.5rem;
-      }
-      &-header2 {
-        grid-area: 2 / 1 / 3 / 2;
-        justify-self: center;
-        row-gap: 1.16rem;
-      }
-      &-imgMagic {
-        height: 68rem;
-        left: 42%;
-      }
-    }
-
-    &-offer {
-      &-img {
-        width: 80%;
-      }
-    }
-  }
-
-  .content {
-    &-block {
-      &-gallery {
-        display: flex;
-        column-gap: 5rem;
-        row-gap: 3.3rem;
-        align-self: end;
-        grid-area: 3 / 2 / 4 / 3;
-      }
-    }
-  }
-
   .page {
     &-breadcrumbs {
       display: none;
     }
-    &-title {
-      @include border-top;
-      padding-top: 3.3rem;
-      padding-bottom: 3.3rem;
-    }
-    &-header {
-      background-position: bottom;
-    }
-
-    &-pros {
-      &-container {
-        padding-top: 5rem;
-        padding-bottom: 5rem;
-      }
-    }
-
-    &-bonuses {
-      padding-top: 15rem;
-      padding-bottom: 5rem;
-    }
-  }
-
-  .list {
-    &-item {
-      &-img {
-        width: 4rem;
-        height: 4rem;
-      }
-    }
   }
 }
-
-
-@media (max-width : 960px) {
-  .development {
-    &-content {
-      &-imgMagic {
-        left: 30%;
-        height: 55rem;
-      }
-    }
-  }
-}
-
-@media (max-width : 650px) {
-  .phone {
-    display: block;
-  }
-
-  .development {
-    &-content {
-      &-imgMagic {
-        height: 50rem;
-        left: 25%;
-      }
-    }
-  }
-
-  .page {
-    &-header {
-      &-block {
-        column-gap: 5rem;
-        padding-right: 2.5rem;
-      }
-    }
-    &-blueBtn {
-      @include page-blueBtn-maxWidth650px;
-    }
-
-    &-pros {
-      position: relative;
-      &-item {
-        align-items: center;
-      }
-    }
-  }
-
-  .pros {
-    &-container {
-      &-arrows {
-        position: absolute;
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-        width: 100%;
-        top: 58%;
-        .swiper-vacancy-arrow-next,.swiper-vacancy-arrow-prev{
-          height: 5rem;
-          img{
-            height: 100%;
-            width: 50%;
-          }
-        }
-      }
-    }
-  }
-}
-
 
 @media (max-width : 550px) {
   html {
     font-size: 4px;
-  }
-
-  .svg {
-    &-vector {
-      &-btn {
-        display: none;
-      }
-    }
-  }
-
-  .scissors-img {
-    position: relative;
-    right: 5%;
-  }
-
-  .development {
-    &-content {
-      &-text {
-        font-size: 4.5rem;
-        width: 100%;
-        grid-area: 4 / 1 / 5 / 3;
-      }
-
-      &-imgMagic {
-        left: 30%;
-        height: 34rem;
-      }
-
-      h3 {
-        width: 65%;
-      }
-
-      &-header2 {
-        grid-area: 2/1/3/3;
-        justify-self: end;
-      }
-    }
-
-    &-offer {
-      background-size: cover;
-      height: 102.5rem;
-      &-title1 {
-        width: 70%;
-        align-self: center;
-        box-shadow: none;
-      }
-
-      &-title2 {
-        box-shadow: none;
-      }
-
-      &-img {
-        grid-template-columns: repeat(2, auto);
-        grid-template-rows: repeat(3, auto);
-        justify-items: center;
-        row-gap: 3.37rem;
-        width: 100%;
-      }
-    }
-  }
-
-  .page {
-    &-title {
-      text-align: center;
-    }
-
-    &-header {
-      column-gap: 0;
-
-      &-block {
-        flex-wrap: wrap;
-        padding-right: 4.75rem;
-      }
-
-      &-text {
-        font-size: 2.4rem;
-      }
-    }
-
-    &-blueBtn {
-      @include page-blueBtn-maxWidth550px;
-    }
-
-    &-bonuses {
-      padding-top: 7rem;
-      padding-bottom: 7rem;
-      &-title {
-        &-main {
-          font-size: 7.5rem;
-        }
-        &-second {
-          font-size: 4.5rem;
-        }
-      }
-    }
-  }
-
-  .vector-btn {
-    display: block;
-  }
-
-  .content {
-    &-block {
-      &-gallery {
-        grid-area: 3 / 1 / 4 / 3;
-        padding-bottom: 6.5rem;
-        justify-content: center;
-      }
-    }
-  }
-
-  .offer {
-    &-main {
-      &-btn {
-        border: none;
-        border-radius: 5px;
-        &-btnBlue {
-          grid-area: 1 / 1 / 2 / 3;
-          background-color: #1149DC;
-        }
-        &-btnRed {
-          grid-area: 2 / 1 / 3 / 3;
-          background-color: #D60917;
-        }
-      }
-      &-rightImg {
-        grid-area: 2 / 1 / 3 / 2;
-      }
-      &-leftImg {
-        grid-area: 2 / 2 / 3 / 3;
-      }
-    }
-  }
-
-  .list {
-    &-item {
-      &-text {
-        font-size: 4.0rem;
-      }
-      &-img {
-        width: 6rem;
-        height: 6rem;
-      }
-    }
   }
 }
