--- a/src/scss/internet-shops.scss
+++ b/src/scss/internet-shops.scss
@@ -1,199 +1,22 @@
 @import "utils/typography";
 @import "utils/vars";
-
-.svg {
-  &-resize-horizontal-round {
-    position: relative;
-    top: 15%;
-  }
-}
-
-.page {
-  &-header {
-    display: flex;
-    column-gap: 5.4rem;
-    background-image: url("../img/internet-shops/background-header.png");
-    background-size: cover;
-    height: 12.4rem;
-    justify-content: space-evenly;
-    &-block {
-      display: flex;
-      column-gap: 10.4rem;
-      height: 12.4rem;
-    }
-    &-cont {
-      color: $white;
-      align-self: center;
-    }
-
-    &-text {
-      font-weight: 400;
-      font-size: 2.5rem;
-      line-height: 1;
-    }
-
-    &-boldText {
-      font-weight: 700;
-      font-size: 3.7rem;
-      line-height: 1.5;
-    }
-  }
-
-  &-blueBtn {
-    @include page-blueBtn;
-  }
-
-  &-bonuses {
-    background-color: #000E2C;
-
-    &-container {
-      display: flex;
-    }
-
-    &-content {
-      display: flex;
-      flex-direction: column;
-      row-gap: 2.6rem;
-      padding-bottom: 5rem;
-      z-index: 2;
-      color: $white;
-    }
-
-    &-title {
-      &-main {
-        font-weight: 350;
-        font-size: 5rem;
-        line-height: 2;
-      }
-      &-second {
-        font-weight: 700;
-        font-size: 2.5rem;
-        line-height: 2;
-      }
-    }
-
-    &-img {
-      object-position: bottom;
-      object-fit: contain;
-    }
-  }
-
-  &-list {
-    &-list {
-      display: flex;
-      flex-direction: column;
-      row-gap: 3.6rem;
-    }
-
-    &-item {
-      color: $white;
-      width: 85.2rem;
-    }
-  }
-}
-
-.vector-btn {
-  display: none;
-}
-
-.list-item-text {
-  font-weight: 350;
-  font-size: 2.5rem;
-  line-height: 1.6;
-}
-
-.internet {
-  &-content {
-    font-weight: 350;
-    color: $dark;
-    padding-top: 4rem;
-    margin-bottom: 3.75rem;
-    @include border-bottom;
-    position: relative;
-    z-index: 2;
-    background-color: $white;
-    &-header {
-      font-size: 8.75rem;
-      line-height: 1;
-      //padding-top: 4.8rem;
-    }
-    &-block {
-      display: flex;
-      column-gap: 7.4rem;
-    }
-  }
-}
-
-.content-block {
-  padding-top: 5.5rem;
-  padding-bottom: 2.5rem;
-  width: 49.2rem;
-  display: flex;
-  flex-direction: column;
-  row-gap: 2.5rem;
-  &-text {
-    font-size: 2.5rem;
-    line-height: 1.6;
-  }
-  &-img {
-    object-fit: contain;
-    position: relative;
-    bottom: 7.5rem;
-    right: 1.8rem;
-  }
-}
+@import "internet-shops/internet-shops-first-screen";
+@import "internet-shops/internet-shops-second-screen";
+@import "internet-shops/internet-shops-third-screen";
+@import "internet-shops/internet-shops-fourth-screen";
 
 
 @media (max-width : 1280px){
   .container {
-    padding: 0 4rem;
+    padding-left: 4rem;
+    padding-right: 4rem;
   }
-
   html {
     font-size: 6px;
   }
-
   .page {
     &-breadcrumbs {
       display: none;
-    }
-
-    &-title {
-      @include border-top;
-      padding-top: 3.3rem;
-      padding-bottom: 3.3rem;
-    }
-
-    &-header {
-      background-position-x: center;
-    }
-
-    &-bonuses {
-      &-img {
-        width: 83.7rem;
-      }
-    }
-  }
-
-  .internet {
-    &-content {
-      padding-top: 8.5rem;
-      &-header {
-      }
-      &-block {
-        column-gap: 4.3rem;
-      }
-    }
-  }
-
-  .content-block {
-    width: 79.3rem;
-    &-img {
-      width: 72.3rem;
-      position: relative;
-      bottom: 4.5rem;
-      right: 0;
-      left: -12.3rem;
     }
   }
 }
@@ -204,186 +27,13 @@
   }
 }
 
-@media (max-width : 860px) {
-  .page {
-    &-bonuses {
-      &-img {
-        width: 70rem;
-        position: relative;
-        right: 16%;
-      }
-    }
-
-    &-blueBtn {
-      @include page-blueBtn-maxWidth650px;
-    }
-  }
-
-  .scissors-img {
-    position: relative;
-    left: -10%;
-    height: 16rem;
-  }
-
-  .content-block {
-    width: 79.3rem;
-    &-img {
-      width: 80.3rem;
-      position: relative;
-      bottom: 7.5rem;
-      right: 0;
-      left: -10.3rem;
-    }
-  }
-}
-
 @media (max-width : 690px) {
   html {
     font-size: 4px;
   }
-
-  .phone {
-    display: block;
-  }
-
-  .page {
-    &-header {
-      display: flex;
-      justify-content: space-evenly;
-      &-block {
-        display: flex;
-        align-self: center;
-        column-gap: 4rem;
-        row-gap: 2.2rem;
-        padding: 4rem 4.7rem;
-        justify-content: space-between;
-      }
-    }
-
-    &-blueBtn {
-      font-size: 2rem;
-    }
-
-    &-bonuses {
-      &-img {
-        display: none;
-      }
-    }
-
-    &-pros {
-      position: relative;
-      &-item {
-        align-items: center;
-      }
-    }
-  }
-
-  .svg-vector-btn {
-    display: none;
-  }
-
-  .vector-btn {
-    display: block;
-    color: $cyan;
-    font-weight: 400;
-    font-size: 3.7rem;
-  }
-
-  .internet {
-    &-content {
-      &-header {
-        font-size: 11.2rem;
-        text-align: center;
-      }
-      &-block {
-        flex-direction: column-reverse;
-        padding-top: 4rem;
-      }
-    }
-  }
-
-  .content-block-text {
-    font-size: 4.5rem;
-  }
-
-  .pros {
-    &-container {
-      &-arrows {
-        position: absolute;
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-        width: 100%;
-        top: 58%;
-        .swiper-vacancy-arrow-next,.swiper-vacancy-arrow-prev{
-          height: 5rem;
-          img{
-            height: 100%;
-            width: 50%;
-          }
-        }
-      }
-    }
-  }
 }
-
 @media (max-width : 550px) {
   html {
     font-size: 4px;
-  }
-
-  .svg {
-    &-vector {
-      &-btn {
-        display: none;
-      }
-    }
-  }
-
-  .scissors-img {
-    position: relative;
-    right: 5%;
-  }
-
-  .page {
-    &-title {
-      text-align: center;
-    }
-
-    &-header {
-      column-gap: 0;
-      &-block {
-        flex-direction: column;
-        padding: 1rem 1.7rem;
-        row-gap: 0;
-      }
-      &-text {
-        font-size: 2rem;
-      }
-      &-boldText {
-        font-size: 3rem;
-      }
-    }
-
-    &-blueBtn {
-      @include page-blueBtn-maxWidth550px;
-    }
-
-    &-bonuses {
-      padding-top: 7rem;
-      padding-bottom: 7rem;
-      &-title {
-        &-main {
-          font-size: 7.5rem;
-        }
-        &-second {
-          font-size: 4.5rem;
-        }
-      }
-    }
-  }
-
-  .vector-btn {
-    display: block;
   }
 }
