--- a/src/scss/1C-integration.scss
+++ b/src/scss/1C-integration.scss
@@ -1,121 +1,14 @@
 @import "utils/typography";
 @import "utils/vars";
+@import "1C-integration/1C-integration-first-screen";
+@import "1C-integration/1C-integration-second-screen";
+@import "1C-integration/1C-integration-third-screen";
+@import "1C-integration/1C-integration-fourth-screen";
+
 
 .page {
-  &-header {
-    background-image: url("../img/integration/integration.png");
-    background-size: cover;
-    height: 12.4rem;
-    display: flex;
-    align-items: center;
-  }
-
-  &-blueBtn {
-    @include page-blueBtn;
-    height: 6.7rem;
-    width: 32.6rem;
-    position: relative;
-    left: 54.5%;
-    font-size: 2.25rem;
-    display: flex;
-    align-items: center;
-    column-gap: 1rem;
-    &-arrow {
-      width: 3rem;
-      height: 3rem;
-      object-fit: contain;
-    }
-  }
-
-  &-list {
-    &-list {
-      display: flex;
-      flex-direction: column;
-      row-gap: 2.5rem;
-    }
-    &-title {
-      font-weight: 500;
-      font-size: 3.1rem;
-      line-height: 1.2;
-    }
-    &-item {
-      display: flex;
-      align-items: center;
-      column-gap: 1.75rem;
-    }
-  }
-
-  &-pros {
-    @include border-top;
-    padding-top: 3.75rem;
-    padding-bottom: 3.75rem;
-  }
-
   &-cases {
     @include border-bottom;
-  }
-}
-
-.integration-content {
-  color: $dark;
-  display: flex;
-  flex-direction: column;
-  row-gap: 2.5rem;
-  padding-top: 3.75rem;
-  padding-bottom: 3.75rem;
-  &-header {
-    font-weight: 350;
-    font-size: 8.75rem;
-    line-height: 1;
-  }
-  &-block {
-    display: flex;
-    column-gap: 10rem;
-    &-text {
-      display: flex;
-      flex-direction: column;
-      row-gap: 2.25rem;
-      width: 30%;
-      &-border {
-        @include border-bottom;
-      }
-      &-container {
-        display: flex;
-        flex-direction: column;
-        row-gap: 2.25rem;
-        padding-top: 3.75rem;
-        padding-bottom: 3.75rem;
-      }
-    }
-  }
-}
-
-.content {
-  &-block {
-    &-text {
-      font-weight: 350;
-      font-size: 2.5rem;
-      line-height: 1.6;
-    }
-    &-header {
-      font-weight: 500;
-      font-size: 3.1rem;
-      line-height: 1.2;
-    }
-  }
-  &-img {
-    object-fit: contain;
-    width: 96.2rem;
-  }
-}
-
-.list {
-  &-item {
-    &-text {
-      font-weight: 350;
-      font-size: 2.25rem;
-      line-height: 1.6;
-    }
   }
 }
 
@@ -128,63 +21,12 @@
     &-breadcrumbs {
       display: none;
     }
-
-    &-title {
-      @include border-top;
-    }
-
-    &-header {
-      background-position: bottom;
-      background-position-x: 40%;
-    }
-  }
-
-  .content {
-    &-img {
-      width: 69.3rem;
-      object-fit: contain;
-    }
-  }
-
-  .integration {
-    &-content {
-      &-block {
-        column-gap: 5rem;
-        justify-content: space-between;
-        &-text {
-          width: 60%;
-        }
-      }
-    }
   }
 }
 
 @media (max-width : 800px) {
   html {
     font-size: 5px;
-  }
-}
-
-@media (max-width : 650px) {
-  .page {
-    &-title {
-      text-align: center;
-    }
-  }
-
-  .integration {
-    &-content {
-      &-header {
-        text-align: center;
-      }
-      &-block {
-        flex-direction: column-reverse;
-        align-items: center;
-        &-text {
-          width: 100%;
-        }
-      }
-    }
   }
 }
 
@@ -199,33 +41,5 @@
 
   .phone {
     display: block;
-  }
-
-  .page {
-    &-header {
-      height: 24.75rem;
-      background-position-x: 30%;
-    }
-
-    &-blueBtn {
-      height: 11rem;
-      width: 30rem;
-      span {
-        font-size: 4rem;
-      }
-      &-arrow {
-        width: 6rem;
-        height: 6rem;
-        object-fit: contain;
-      }
-    }
-  }
-
-  .integration {
-    &-content {
-      &-header {
-        text-align: center;
-      }
-    }
   }
 }
