--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -19,12 +19,6 @@
   display: none;
 }
 
-.list-item-img {
-  width: 3rem;
-  height: 3rem;
-  object-fit: cover;
-}
-
 .container {
   @include widthContainer;
   padding: 0 15rem;
@@ -62,44 +56,84 @@
       line-height: 1.6;
     }
   }
+
+  &-list {
+    &-list {
+      display: flex;
+      flex-direction: column;
+      align-self: center;
+      row-gap: 3.6rem;
+    }
+    &-item {
+      display: flex;
+      column-gap: 1.7rem;
+      align-items: center;
+    }
+  }
 }
 
-@media (max-width : 1024px) {
+.list {
+  &-item {
+    &-text {
+      font-weight: 350;
+      font-size: 2.5rem;
+      line-height: 1.6;
+    }
+    &-img {
+      width: 3rem;
+      height: 3rem;
+      object-fit: cover;
+    }
+  }
+}
+
+  @media (max-width : 1024px) {
     .container {
       padding-left: 4rem;
       padding-right: 4rem;
     }
 
-  .page {
-    &-description {
-      padding-top: 5rem;
-      padding-bottom: 5rem;
-      &-title {
-        font-weight: 700;
-        font-size: 3.3rem;
-        line-height: 1.3;
-      }
-      &-text {
-        font-size: 3rem;
-      }
-    }
-  }
-}
-
-@media (max-width : 500px) {
-
-  .page {
-    //&-title {
-    //  text-align: center;
-    //  font-size: 7rem;
-    //}
-    &-description {
-      &-title {
-        font-size: 5rem;
-      }
-      &-text {
-        font-size: 4.5rem;
+    .page {
+      &-description {
+        padding-top: 5rem;
+        padding-bottom: 5rem;
+        &-title {
+          font-weight: 700;
+          font-size: 3.3rem;
+          line-height: 1.3;
+        }
+        &-text {
+          font-size: 3rem;
+        }
       }
     }
   }
-}
+
+  @media (max-width : 500px) {
+    .page {
+      //&-title {
+      //  text-align: center;
+      //  font-size: 7rem;
+      //}
+      &-description {
+        &-title {
+          font-size: 5rem;
+        }
+        &-text {
+          font-size: 4.5rem;
+        }
+      }
+    }
+
+    .list {
+      &-item {
+        &-text {
+          font-size: 4.0rem;
+        }
+        &-img {
+          width: 6rem;
+          height: 6rem;
+        }
+      }
+    }
+  }
