--- a/src/scss/support.scss
+++ b/src/scss/support.scss
@@ -1,154 +1,18 @@
 @import "utils/typography";
 @import "utils/vars";
+@import "support/support-first-screen";
+@import "support/support-second-screen";
+@import "support/support-third-screen";
+@import "support/support-fourth-screen";
+@import "support/support-fifth-screen";
 
 .page {
-  &-header {
-    background-image: url("../img/support/support.png");
-    background-size: cover;
-    height: 12.4rem;
-    display: flex;
-    align-items: center;
-  }
-
-  &-blueBtn {
-    @include page-blueBtn;
-    height: 6.7rem;
-    width: 32.6rem;
-    position: relative;
-    left: 54.5%;
-    font-size: 2rem;
-    display: flex;
-    align-items: center;
-    column-gap: 1rem;
-    &-arrow {
-      width: 3rem;
-      height: 3rem;
-      object-fit: contain;
-    }
-  }
-
-  &-description {
-    @include border-bottom;
-  }
-
-  &-pros {
-    &-container {
-      padding-top: 10rem;
-    }
-  }
-
-  &-list {
-    &-block {
-      @include border-bottom;
-      &-cont {
-        color: $dark;
-        padding-bottom: 4.1rem;
-        display: flex;
-        flex-direction: column;
-        row-gap: 4.5rem;
-      }
-    }
-    &-title {
-      font-weight: 500;
-      font-size: 3.1rem;
-      line-height: 1.2;
-    }
-    &-item {
-      display: flex;
-      align-items: center;
-      column-gap: 1.75rem;
-    }
-    &-text {
-      font-weight: 350;
-      font-size: 2.25rem;
-      line-height: 1;
-    }
-  }
-
   &-cases {
     @include border-bottom;
   }
 }
 
 .support {
-  &-gallery {
-    display: flex;
-    flex-direction: column;
-    row-gap: 4rem;
-    padding-top: 3.75rem;
-    padding-bottom: 3.75rem;
-    &-header {
-      color: $dark;
-      font-weight: 500;
-      font-size: 5rem;
-      line-height: 1;
-      text-align: center;
-    }
-    &-block {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: space-between;
-    }
-  }
-
-  &-care {
-    height: 69rem;
-    background-image: url("../img/support/background-support.png");
-    &-cont {
-      display: flex;
-      padding-top: 7.3rem;
-      padding-bottom: 7.3rem;
-      justify-content: space-between;
-    }
-    &-block {
-      display: flex;
-      flex-direction: column;
-      color: $white;
-      width: 89rem;
-      row-gap: 3.75rem;
-    }
-    &-title {
-      font-weight: 350;
-      font-size: 8.75rem;
-      line-height: 1;
-    }
-    &-text {
-      font-weight: 350;
-      font-size: 2.5rem;
-      line-height: 1.6;
-    }
-    &-btn {
-      @include mainButton;
-      background: $cyan;
-      font-size: 1.8rem;
-      line-height: 1;
-      height: 5.6rem;
-      width: 15.2rem;
-      border: 0.15rem solid $grey;
-      &:hover {
-        border: 0.1rem solid $black;
-        background-color: $black;
-      }
-    }
-    &-img {
-      width: 60rem;
-      height: 56rem;
-      position: relative;
-      display: flex;
-      flex-direction: column;
-      &-girl {
-        position: relative;
-        z-index: 2;
-      }
-      &-shadow {
-        position: relative;
-        bottom: 22%;
-        left: 3%;
-        z-index: 0;
-      }
-    }
-  }
-
   &-costs {
     padding-top: 3.75rem;
     padding-bottom: 3.75rem;
@@ -164,15 +28,6 @@
     &-breadcrumbs {
       display: none;
     }
-
-    &-title {
-      @include border-top;
-    }
-
-    &-header {
-      background-position: bottom;
-      background-position-x: 40%;
-    }
   }
 }
 
@@ -182,89 +37,8 @@
   }
 }
 
-@media (max-width : 750px) {
-  .support {
-    &-care {
-      &-block {
-        width: 50%;
-      }
-      &-title {
-        font-size: 7rem;
-      }
-    }
-  }
-}
-
-@media (max-width : 650px) {
-  .page {
-    &-title {
-      text-align: center;
-      font-size: 7rem;
-    }
-  }
-}
-
-@media (max-width : 550px) {
-  .desktop {
-    display: none;
-  }
-
-  .support {
-    &-care {
-      height: 80.5rem;
-      &-cont {
-        flex-direction: column;
-      }
-      &-block {
-        width: 100%;
-        text-align: center;
-        align-items: center;
-      }
-      &-title {
-        font-size: 10rem;
-      }
-      &-text {
-        font-size: 4rem;
-      }
-      &-btn {
-        width: 23.8rem;
-        height: 8.3rem;
-        font-size: 3.3rem;
-      }
-    }
-  }
-}
-
 @media (max-width : 500px) {
   html {
     font-size: 4px;
-  }
-
-  .page {
-    &-header {
-      height: 24.75rem;
-    }
-
-    &-blueBtn {
-      height: 10rem;
-      width: 55rem;
-      position: relative;
-      left: 35.5%;
-      font-size: 4rem;
-      &-arrow {
-        width: 6rem;
-        height: 6rem;
-        object-fit: contain;
-      }
-    }
-  }
-
-  .support {
-    &-gallery {
-      &-block {
-        flex-direction: column;
-        align-items: center;
-      }
-    }
   }
 }
