--- a/src/scss/development/development-fourth-screen.scss
+++ b/src/scss/development/development-fourth-screen.scss
@@ -6,7 +6,7 @@
     text-align: center;
     height: 71.6rem;
     background-position: bottom;
-    background-image: url("../img/development/jaccket.png");
+    background-image: url("../../img/development/jaccket.png");
     &-container {
       display: flex;
       flex-direction: column;
