--- a/src/scss/mobile.scss
+++ b/src/scss/mobile.scss
@@ -1,6 +1,7 @@
 @import "utils/typography";
 @import "utils/vars";
 @import "all-pages/header";
+@import 'all-pages/headerConsultation';
 @import "mobile/mobile-content";
 @import "mobile/mobile-first-screen";
 @import "mobile/mobile-second-screen";
